--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-Hello World
 
-Michael Mahemoff's book, Ajax Design Patterns, was a real jolt for me in 2006, the neon possibility of mixing art and technology flashed and flashed and flashed in my mind. The book lured (maybe taunted) me to learn to pound code; and despite my imperfect execution, I found some simplified workflows that allowed me to lean farther over the unappealing to try reach my vision of the mobile device as a creative prototyping machine. 
+
+Michael Mahemoff's book, Ajax Design Patterns, was a real jolt for me in 2006, the neon possibility of mixing art and 
+
+technology flashed and flashed and flashed in my mind. The book lured (maybe taunted) me to learn to pound code; and 
+
+despite my imperfect execution, I found some simplified workflows that allowed me to lean farther over the unappealing,
+
+ stretching to reach my vision of the mobile device as a creative prototyping machine. 
 
