--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
+#  pasfrais manages the anonymous collection and presentation of near real time, geo-located, public domain images. 
+
+To reference the image, you may simply make a note of the shortURL and freely use it elsewhere. However, this image does not persist, the pasfrais service removes the image content and all references to the image after about 1 hour. 
 
 
-Michael Mahemoff's book, Ajax Design Patterns, was a real jolt for me in 2006, the neon possibility of mixing art and 
+inspitation:
 
-technology flashed and flashed and flashed in my mind. The book lured (maybe taunted) me to learn to pound code; and 
+Michael Mahemoff's book, Ajax Design Patterns, 
 
-despite my imperfect execution, I found some simplified workflows that allowed me to lean farther over the unappealing,
+blueimp
 
- stretching to reach my vision of the mobile device as a creative prototyping machine. 
+cubiq
+
+
 
