--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 #  pasfrais manages the anonymous collection and presentation of near real time, geo-located, public domain images. 
 
+<br></br>
+
 To reference the image, you may simply make a note of the shortURL and freely use it elsewhere. However, this image does not persist, the pasfrais service removes the image content and all references to the image after about 1 hour. 
 
+<br></br>
 
-inspitation:
+inspiration:
+
+<br></br>
 
 Michael Mahemoff's book, Ajax Design Patterns, 
 
+<br></br>
+
 blueimp
+
+<br></br>
 
 cubiq
 
