--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 
 <br></br>
 
-To reference the image, you may simply make a note of the shortURL and freely use it elsewhere. However, this image does not persist, the pasfrais service removes the image content and all references to the image after about 1 hour. 
+To reference the image, you may simply make a note of the shortURL and freely use it elsewhere. However, 
+<br></br>
+this image does not persist, the pasfrais service removes the image content and all references to the image after 
+<br></br>
+about 1 hour. 
 
 <br></br>
 
@@ -10,7 +14,7 @@ inspiration:
 
 <br></br>
 
-Michael Mahemoff's book, Ajax Design Patterns, 
+Ajax Design Patterns, Michael Mahemoff 
 
 <br></br>
 
